# cookiecutters

./: .gitignore  README.md
cookiecutters/python_poetry/: cookiecutter.json
cookiecutters/python_poetry/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
cookiecutters/python_setuptools/: README.md  cookiecutter.json
cookiecutters/python_setuptools/hooks/: post_gen_project.py  pre_gen_project.py
cookiecutters/python_setuptools/{{cookiecutter.package_name}}/: .drone.yml  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
cookiecutters/python_setuptools/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  main.py
cookiecutters/python_setuptools/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/config/: config.py  logging.py
cookiecutters/python_setuptools/{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
cookiecutters/python_setuptools/{{cookiecutter.repo_name}}/: MANIFEST.in  Makefile  README.md  pyproject.toml
python_poetry/{{cookiecutter.project_slug}}/: CHANGELOG.md  Makefile  pyproject.toml
python_poetry/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: logging.py
python_poetry_setuptools/{{cookiecutter.project_slug}}/: LICENSE  pyproject.toml
python_setuptools/: cookiecutter.json
python_setuptools/hooks/: post_gen_project.py
python_setuptools/{{cookiecutter.project_slug}}/: .gitignore  AUTHORS.md  CHANGELOG.md  Makefile  setup.py
python_setuptools/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
(+2 files in other folders)
