[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
authors = [
    "{{ cookiecutter.author }} <{{ cookiecutter.author_email }}>"
]
license = "{{ cookiecutter.license }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
{% if cookiecutter.repository_url %}repository = {{ cookiecutter.repository_url }} {%- endif %}

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies] 
pytest = "^7.1"
black = "^22.3"

[tool.black]
{% if cookiecutter.black_line_length != "default" %}line-length = {{ cookiecutter.black_line_length }} {%- endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"